<resources>
    <string name="app_name">AIIMS Health App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_register">Log in or Sign up</string>
    <string name="default_web_client_id" translatable="false">881865674352-23cplbu56b2g0i6io5kf53jisir7aalj.apps.googleusercontent.com</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp">OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="continue_btn">Continue</string>
    <string name="username">Username</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="login_successful">Login successfull</string>
    <string name="error_checking_username">Error checking username.</string>
    <string name="registration_successful">Registration successful.</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="profile_update_failed">Profile Updated Failed!</string>
    <string name="number_of_days">Number of Days</string>
    <string name="hours">Hours</string>
    <string name="mins">Mins</string>
    <string name="socio_demographic">Socio-Demographic</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="income_level">Monthly Income</string>
    <string name="next">Next</string>
    <string name="height">Height in cms</string>
    <string name="anthropometric">Anthropometric</string>
    <string name="weight">Weight in kgs</string>
    <string name="waist_circumference">Waist Circumference</string>
    <string name="bmi">BMI</string>
    <string name="do_you_consume_any_form_of_tobacco_items">Do you consume any form of tobacco items?</string>
    <string name="do_you_consume_alcohol">Do you consume alcohol?</string>
    <string name="history_of_diabetes">History of Diabetes</string>
    <string name="if_yes_enter_number_of_years_of_disease">If yes, enter number of years of disease</string>
    <string name="history_of_hypertension">History of Hypertension</string>
    <string name="type_of_medication">Type of Medication (If multiple, separate with comma)</string>
    <string name="hours_of_sleep">Hours of Sleep</string>
    <string name="dietary_habit">Dietary Habit</string>
    <string name="hydration_reminder">Hydration Reminder</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="employment_status_array">
        <item>Employed</item>
        <item>Unemployed</item>
    </string-array>
    <string-array name="education_level_array">
        <item>Primary School</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>Intermediate/Diploma</item>
        <item>Graduate</item>
        <item>Professional Degree</item>
        <item>Other</item>
    </string-array>
    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="diet">
        <item>Vegetarian</item>
        <item>Non-Vegetarian</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>