<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:text="@string/do_you_consume_any_form_of_tobacco_items"
                android:textSize="20sp"
                android:gravity="center_vertical" />

            <Spinner
                android:id="@+id/spTobacco"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:entries="@array/yes_no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/do_you_consume_alcohol"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spAlcohol"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:entries="@array/yes_no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/history_of_diabetes"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spDiabetes"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:entries="@array/yes_no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/if_yes_enter_number_of_years_of_disease"
                android:gravity="center_vertical" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDiabetes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="260dp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:text="@string/history_of_hypertension"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spHypertension"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:entries="@array/yes_no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/if_yes_enter_number_of_years_of_disease"
                android:gravity="center_vertical" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHypertension"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="@string/type_of_medication" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMedication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="@string/hours_of_sleep" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSleep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="230dp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:text="@string/dietary_habit"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spDiet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/diet" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNextNextNextNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
    </LinearLayout>
</ScrollView>
